parser/src/snapshots/squawk_parser__parse__tests__create_role_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: CreateRoleStmt(
                Object({
                    "options": Array([
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "Integer": Object({
                                        "ival": Number(
                                            1,
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "canlogin",
                                ),
                                "location": Number(
                                    30,
                                ),
                            }),
                        }),
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "String": Object({
                                        "str": String(
                                            "jw8s0F4",
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "password",
                                ),
                                "location": Number(
                                    36,
                                ),
                            }),
                        }),
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "String": Object({
                                        "str": String(
                                            "2005-01-01",
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "validUntil",
                                ),
                                "location": Number(
                                    60,
                                ),
                            }),
                        }),
                    ]),
                    "role": String(
                        "miriam",
                    ),
                    "stmt_type": String(
                        "ROLESTMT_ROLE",
                    ),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                84,
            ),
        },
    ],
)
