parser/src/snapshots/squawk_parser__parse__tests__create_sequence_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: CreateSeqStmt(
                    Object({
                        "options": Array([
                            Object({
                                "DefElem": Object({
                                    "arg": Object({
                                        "Integer": Object({
                                            "ival": Number(
                                                101,
                                            ),
                                        }),
                                    }),
                                    "defaction": String(
                                        "DEFELEM_UNSPEC",
                                    ),
                                    "defname": String(
                                        "start",
                                    ),
                                    "location": Number(
                                        24,
                                    ),
                                }),
                            }),
                        ]),
                        "sequence": Object({
                            "inh": Bool(
                                true,
                            ),
                            "location": Number(
                                17,
                            ),
                            "relname": String(
                                "serial",
                            ),
                            "relpersistence": String(
                                "p",
                            ),
                        }),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    33,
                ),
            },
        ),
    ],
)
