parser/src/snapshots/squawk_parser__parse__tests__create_transform_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: CreateTransformStmt(
                Object({
                    "fromsql": Object({
                        "objargs": Array([
                            Object({
                                "TypeName": Object({
                                    "location": Number(
                                        96,
                                    ),
                                    "names": Array([
                                        Object({
                                            "String": Object({
                                                "sval": String(
                                                    "internal",
                                                ),
                                            }),
                                        }),
                                    ]),
                                    "typemod": Number(
                                        -1,
                                    ),
                                }),
                            }),
                        ]),
                        "objname": Array([
                            Object({
                                "String": Object({
                                    "sval": String(
                                        "hstore_to_plpython",
                                    ),
                                }),
                            }),
                        ]),
                    }),
                    "lang": String(
                        "plpythonu",
                    ),
                    "tosql": Object({
                        "objargs": Array([
                            Object({
                                "TypeName": Object({
                                    "location": Number(
                                        151,
                                    ),
                                    "names": Array([
                                        Object({
                                            "String": Object({
                                                "sval": String(
                                                    "internal",
                                                ),
                                            }),
                                        }),
                                    ]),
                                    "typemod": Number(
                                        -1,
                                    ),
                                }),
                            }),
                        ]),
                        "objname": Array([
                            Object({
                                "String": Object({
                                    "sval": String(
                                        "plpython_to_hstore",
                                    ),
                                }),
                            }),
                        ]),
                    }),
                    "type_name": Object({
                        "location": Number(
                            22,
                        ),
                        "names": Array([
                            Object({
                                "String": Object({
                                    "sval": String(
                                        "hstore",
                                    ),
                                }),
                            }),
                        ]),
                        "typemod": Number(
                            -1,
                        ),
                    }),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                162,
            ),
        },
    ],
)
