parser/src/snapshots/squawk_parser__parse__tests__create_view_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: ViewStmt(
                    Object({
                        "query": Object({
                            "SelectStmt": Object({
                                "op": Number(
                                    0,
                                ),
                                "targetList": Array([
                                    Object({
                                        "ResTarget": Object({
                                            "location": Number(
                                                29,
                                            ),
                                            "val": Object({
                                                "A_Const": Object({
                                                    "location": Number(
                                                        29,
                                                    ),
                                                    "val": Object({
                                                        "String": Object({
                                                            "str": String(
                                                                "Hello World",
                                                            ),
                                                        }),
                                                    }),
                                                }),
                                            }),
                                        }),
                                    }),
                                ]),
                            }),
                        }),
                        "view": Object({
                            "RangeVar": Object({
                                "inh": Bool(
                                    true,
                                ),
                                "location": Number(
                                    13,
                                ),
                                "relname": String(
                                    "vista",
                                ),
                                "relpersistence": String(
                                    "p",
                                ),
                            }),
                        }),
                        "withCheckOption": Number(
                            0,
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    42,
                ),
            },
        ),
        RawStmt(
            RawStmt {
                stmt: ViewStmt(
                    Object({
                        "query": Object({
                            "SelectStmt": Object({
                                "fromClause": Array([
                                    Object({
                                        "RangeVar": Object({
                                            "inh": Bool(
                                                true,
                                            ),
                                            "location": Number(
                                                90,
                                            ),
                                            "relname": String(
                                                "films",
                                            ),
                                            "relpersistence": String(
                                                "p",
                                            ),
                                        }),
                                    }),
                                ]),
                                "op": Number(
                                    0,
                                ),
                                "targetList": Array([
                                    Object({
                                        "ResTarget": Object({
                                            "location": Number(
                                                79,
                                            ),
                                            "val": Object({
                                                "ColumnRef": Object({
                                                    "fields": Array([
                                                        Object({
                                                            "A_Star": Object({}),
                                                        }),
                                                    ]),
                                                    "location": Number(
                                                        79,
                                                    ),
                                                }),
                                            }),
                                        }),
                                    }),
                                ]),
                                "whereClause": Object({
                                    "A_Expr": Object({
                                        "kind": Number(
                                            0,
                                        ),
                                        "lexpr": Object({
                                            "ColumnRef": Object({
                                                "fields": Array([
                                                    Object({
                                                        "String": Object({
                                                            "str": String(
                                                                "kind",
                                                            ),
                                                        }),
                                                    }),
                                                ]),
                                                "location": Number(
                                                    106,
                                                ),
                                            }),
                                        }),
                                        "location": Number(
                                            111,
                                        ),
                                        "name": Array([
                                            Object({
                                                "String": Object({
                                                    "str": String(
                                                        "=",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "rexpr": Object({
                                            "A_Const": Object({
                                                "location": Number(
                                                    113,
                                                ),
                                                "val": Object({
                                                    "String": Object({
                                                        "str": String(
                                                            "Comedy",
                                                        ),
                                                    }),
                                                }),
                                            }),
                                        }),
                                    }),
                                }),
                            }),
                        }),
                        "view": Object({
                            "RangeVar": Object({
                                "inh": Bool(
                                    true,
                                ),
                                "location": Number(
                                    56,
                                ),
                                "relname": String(
                                    "comedies",
                                ),
                                "relpersistence": String(
                                    "p",
                                ),
                            }),
                        }),
                        "withCheckOption": Number(
                            0,
                        ),
                    }),
                ),
                stmt_location: 43,
                stmt_len: Some(
                    78,
                ),
            },
        ),
    ],
)
