parser/src/snapshots/squawk_parser__parse__tests__deallocate_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: DeallocateStmt(
                    Object({}),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    23,
                ),
            },
        ),
    ],
)
